--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@
   font-family: "Montserrat", serif;
 
 }
-body{
+
+body {
   font-family: "Montserrat", serif;
 }
 
@@ -38,6 +39,7 @@ body{
 }
 
 @media (min-width: 1200px) {
+
   .container,
   .container-lg,
   .container-md,
@@ -52,18 +54,21 @@ body{
 
 }
 
-.list-style-none > li:hover .links::before {
+.list-style-none>li:hover .links::before {
   content: '';
   background-image: url('./assets/header/link_hover.svg');
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-  left: 100%; /* Start from outside the right edge */
+  left: 100%;
+  /* Start from outside the right edge */
   top: 50%;
-  transform: translate(-100%, -50%); /* Move to the left when hovered */
+  transform: translate(-100%, -50%);
+  /* Move to the left when hovered */
   width: 100%;
   height: 100%;
-  opacity: 1; /* Make visible on hover */
+  opacity: 1;
+  /* Make visible on hover */
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 
@@ -73,12 +78,15 @@ body{
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-  left: 100%; /* Initially positioned outside */
+  left: 100%;
+  /* Initially positioned outside */
   top: 50%;
-  transform: translate(0, -50%); /* Positioned off-screen */
+  transform: translate(0, -50%);
+  /* Positioned off-screen */
   width: 100%;
   height: 100%;
-  opacity: 0; /* Hidden initially */
+  opacity: 0;
+  /* Hidden initially */
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 
@@ -96,6 +104,59 @@ a {
   color: #111 !important;
   text-decoration: none !important;
 }
+
 .navbar .container-fluid {
   padding: 0 !important;
+}
+
+.contact_bg {
+  position: relative;
+  background: linear-gradient(45deg, #6a11cb, #2575fc);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vh;
+}
+
+
+.header-container {
+  /* position: relative; */
+  z-index: 1000;
+  background: transparent;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.header-navbar {
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  background-color: transparent;
+}
+
+[data-scroll-sticky].stuck .header-navbar {
+  transform: translateY(0);
+  background-color: rgba(255, 255, 255, 0.9);
+  /* Add a background when sticky */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  /* Add shadow */
+}
+
+.header-navbar ul li .links {
+  color: #333;
+  transition: color 0.3s ease;
+}
+
+.header-navbar ul li .links:hover {
+  color: #007bff;
+}
+
+.contact_bg::before {
+  content: '';
+  background: linear-gradient(0deg, #ffffff, transparent);
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  display: block;
+  z-index: 99;
+  position: absolute;
 }
