--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Apply Montserrat font globally */
 * {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
@@ -6,14 +5,10 @@
   box-sizing: border-box;
 }
 
-/* Optional: Add font weights for better customization */
 body {
   font-weight: 400;
-  /* Normal */
   font-size: 16px;
-  /* Base font size */
   line-height: 1.6;
-  /* Base line height */
 }
 
 /*       About     */
@@ -27,7 +22,7 @@ body {
 }
 
 ul {
-  list-style-image: url('path-to-your-icon.png');
+  /* list-style-image: url('path-to-your-icon.png'); */
   /* Replace with your custom icon */
   margin: 0;
   padding: 0 20px;
@@ -35,7 +30,6 @@ ul {
 
 li {
   margin-bottom: 10px;
-  /* Spacing between list items */
   font-size: 16px;
   color: #333;
 }
@@ -556,7 +550,7 @@ h2 {
   .dropdown-toggle {
     height: 40px;
     line-height: 3;
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .menu-toggle-btn {
